Fixing notLogged UX + Fixing Weather description + Increase Chrome scrollbar height

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -31,7 +31,7 @@ body {
 // https://developer.mozilla.org/en-US/docs/Web/CSS/::-webkit-scrollbar
 ::-webkit-scrollbar {
     width: 8px;
-    height: 5px;
+    height: 7px;
 }
 
 ::-webkit-scrollbar-track {
